--- a/frontend/src/pages/Student/Dashboard.css
+++ b/frontend/src/pages/Student/Dashboard.css
@@ -40,9 +40,14 @@
 
 .main-menu {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  flex-direction: column;
   margin: 20px 0;
+}
+
+.row {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
 }
 
 .card {
